# fx-regime-lab

./: .cursorignore  .cursorindexingignore  .cursorrules  .dev.vars.example  .env.example  .gitignore  AGENTS.md  AUDIT_MASTER_LOG.md  BUG_REPORT.md  CLAUDE.md  CONSUMER_MASTER_PLAN.md  CONTEXT.md  DC_Series_Motor_Presentation_Guide.docx  DEPLOY.md  G10_FX_FRAMEWORK_MASTER_PLAN.md  GEMINI.md  MASTER_PHASE_ROADMAP.md  MASTER_PLAN.md  PLAN.md  README.md  TASK.md  ULTIMATE_MASTER_PLAN.md  _check_brand_v2.py  _check_counts.py  _check_phase1.py  _check_phase23.py  _check_phase3.py  _idempotency_diff.py  _stress_test.py  _tmp_card.py  ai_brief.py  config.py  cot_pipeline.py  create_charts_plotly.py  create_dashboards.py  create_html_brief.py  deploy.py  index.html  inr_pipeline.py  macro_pipeline.py  (+16 more)
.cursor/: settings.json
.obsidian/: graph.json  workspace.json
_docs/: _index.md
briefs/: brief_20260228.txt  brief_20260302.txt  brief_20260303.txt  brief_20260305.html  brief_20260305.txt  brief_20260309.html  brief_20260312.html  brief_20260316.html  (+20 more)
pipeline/: backfill_g10_history.py  force_sync.py  prefect.yaml  pyproject.toml  run_daily.sh  run_weekly.sh  seed_history.py  seed_macro_history.py  universe.json  verify_launch.py
pipeline/src/: types.py
pipeline/src/ai/: client.py
pipeline/src/analysis/: __init__.py  analogs.py  asymmetry.py  event_name_normalize.py  event_risk.py  markov.py  systemic.py
pipeline/src/db/: rollback.py  writer.py
pipeline/src/fetchers/: async_engine.py  buffer_keys.py  cot.py  cross_asset.py  fx_spot.py  macro_calendar.py  open_interest.py  polymarket.py  substack.py  volatility.py  yields.py
pipeline/src/regime/: classifier.py  composite.py  confidence.py
pipeline/src/scheduler/: orchestrator.py  overnight_check.py
pipeline/src/signals/: cot.py  open_interest.py  rate.py  volatility.py
pipeline/src/validation/: backtest.py  ingestion_buffer.py  ledger.py
pipeline/tests/: test_ingestion_buffer.py  test_ledger.py  test_regime.py  test_signals.py  test_systemic.py  test_validation.py
(+1035 files in other folders)
